--- a/configuration/MelanopsinMR_EyeTrackingConfig.json
+++ b/configuration/MelanopsinMR_EyeTrackingConfig.json
@@ -17,19 +17,6 @@
 		"hook": "",
 		"importance": "",
 		"localHookTemplate": "",
-		"name": "MelanopsinMR_EyeTracking",
-		"pathPlacement": "append",
-		"subfolder": "",
-		"toolboxRoot": "",
-		"type": "git",
-		"update": "",
-		"url": "https:\/\/github.com\/gkaguirrelab\/MelanopsinMR_EyeTracking.git"
-	},
-	{
-		"flavor": "",
-		"hook": "",
-		"importance": "",
-		"localHookTemplate": "",
 		"name": "mriTemporalFitting",
 		"pathPlacement": "append",
 		"subfolder": "",
@@ -37,5 +24,18 @@
 		"type": "git",
 		"update": "",
 		"url": "https:\/\/github.com\/gkaguirrelab\/mriTemporalFitting.git"
+	},
+	{
+		"flavor": "",
+		"hook": "",
+		"importance": "",
+		"localHookTemplate": "",
+		"name": "pupilTemporalFitting",
+		"pathPlacement": "append",
+		"subfolder": "",
+		"toolboxRoot": "",
+		"type": "git",
+		"update": "",
+		"url": "https:\/\/github.com\/gkaguirrelab\/pupilTemporalFitting.git"
 	}
 ]
