--- a/configuration/MelanopsinMR_PupilAnalysisConfig.json
+++ b/configuration/MelanopsinMR_PupilAnalysisConfig.json
@@ -23,6 +23,6 @@
 		"toolboxRoot": "",
 		"type": "git",
 		"update": "",
-		"url": "https:\/\/github.com\/gkaguirrelab\/mriTemporalFitting.git"
+		"url": "https:\/\/github.com\/gkaguirrelab\/temporalFittingEngine.git"
 	}
 ]
